@@ -110,7 +110,7 @@ if(file.exists(file.path(projFolder,"workflow.png"))) knitr::include_graphics(fi
 # Basic stats
 
 ```{r get pipeline version}
-pipeSMK <- readLines(file.path(pipelineFolder,"miRNA-pipeline.smk"))
+pipeSMK <- readLines(file.path(pipelineFolder,"Snakebite-miRNA.smk"))
 mirdbstat <- readLines(file.path(projFolder, "STATS", "mirdb.stats"))
 pipeVersion <- gsub("##### Version: ","",pipeSMK[grep("##### Version:", pipeSMK)])[1]
 if(file.exists(file.path(projFolder, "sampleInfo.txt"))){
@@ -1085,6 +1085,10 @@ fc.expr.stats <- merge(fc.in[[1]]$summary, fc.in[[2]]$summary, by="Status")
 for(i in 3:length(fc.files)){
   fc.expr.stats <- merge(fc.expr.stats, fc.in[[i]]$summary, by="Status")
 }
+
+colnames(fc.expr.stats) <- gsub("_reference_star.bam", "", sapply(strsplit(colnames(fc.expr.stats), "Reference."),"[",2))
+colnames(fc.expr.stats)[1] <- "Status"
+
 ```
 
 Now get the counts per biotype
@@ -1387,48 +1391,48 @@ samples.adj <- gsub("-",".", samples)
 
 rawReads_perSample <- c()
 for(i in 1:length(samples)){
-  rawReads_perSample[i] <- sum(raw.reads[grep(samples[i], names(raw.reads))])
+  rawReads_perSample[i] <- sum(raw.reads[grep(paste0("^", samples[i]), names(raw.reads))])
 }
 names(rawReads_perSample) <- samples
 
 qcRemovedReads_perSample <- c()
 for(i in 1:length(samples)){
-  qcRemovedReads_perSample[i] <- rawReads_perSample[grep(samples[i], names(rawReads_perSample))]-sum(trimmed.reads[grep(samples[i], names(trimmed.reads))])
+  qcRemovedReads_perSample[i] <- rawReads_perSample[grep(paste0("^",samples[i]), names(rawReads_perSample))]-sum(trimmed.reads[grep(paste0("^", samples[i]), names(trimmed.reads))])
 }
 
 refAssignedReads_perSample <- c() 
 for(i in 1:length(samples)){
-  refAssignedReads_perSample[i] <- fc.expr.stats[1,grep(samples.adj[1], colnames(fc.expr.stats))]
+  refAssignedReads_perSample[i] <- fc.expr.stats[1,grep(paste0("^", samples.adj[i]), colnames(fc.expr.stats))]
 }
 
 refUnassigned_AmbiguityReads_perSample <- c() 
 for(i in 1:length(samples)){
-  refUnassigned_AmbiguityReads_perSample[i] <- fc.expr.stats[2,grep(samples.adj[i], colnames(fc.expr.stats))]
+  refUnassigned_AmbiguityReads_perSample[i] <- fc.expr.stats[2,grep(paste0("^", samples.adj[i]), colnames(fc.expr.stats))]
 }
 
 refUnassigned_NoFeatureReads_perSample <- c() 
 for(i in 1:length(samples)){
-  refUnassigned_NoFeatureReads_perSample[i] <- fc.expr.stats[8,grep(samples.adj[i], colnames(fc.expr.stats))]
+  refUnassigned_NoFeatureReads_perSample[i] <- fc.expr.stats[8,grep(paste0("^", samples.adj[i]), colnames(fc.expr.stats))]
 }
 
 refUnassigned_UnmappedReads_perSample <- c() 
 for(i in 1:length(samples)){
-  refUnassigned_UnmappedReads_perSample[i] <- fc.expr.stats[14,grep(samples.adj[i], colnames(fc.expr.stats))]
+  refUnassigned_UnmappedReads_perSample[i] <- fc.expr.stats[14,grep(paste0("^", samples.adj[i]), colnames(fc.expr.stats))]
 }
 
 mirbaseAssigned_MatureReads_perSample <- c()
 for(i in 1:length(samples)){
-  mirbaseAssigned_MatureReads_perSample[i] <- sum(star.mature_species[,grep(samples[i], colnames(star.mature_species))])
+  mirbaseAssigned_MatureReads_perSample[i] <- sum(star.mature_species[,grep(paste0("^", samples.adj[i]), colnames(star.mature_species))])
 }
 
 mirbaseAssigned_HairpinReads_perSample <- c()
 for(i in 1:length(samples)){
-  mirbaseAssigned_HairpinReads_perSample[i] <- sum(star.hairpin_species[,grep(samples[i], colnames(star.hairpin_species))])
+  mirbaseAssigned_HairpinReads_perSample[i] <- sum(star.hairpin_species[,grep(paste0("^", samples.adj[i]), colnames(star.hairpin_species))])
 }
 
 contamination_trnaReads_perSample <- c()
 for(i in 1:length(samples)){
-  contamination_trnaReads_perSample[i] <- trna.mapped.reads[grep(samples[i], names(trna.mapped.reads))]
+  contamination_trnaReads_perSample[i] <- trna.mapped.reads[grep(paste0("^", samples.adj[i]), names(trna.mapped.reads))]
 }
 
 contamination_phixReads_perSample <- c()
@@ -1439,7 +1443,7 @@ for(i in 1:length(samples)){
 reference_CountsPerBiotype_perSample <- counts_per_biotype[-c(1:2),]
 
 for(i in 1:length(samples)){
-  reference_CountsPerBiotype_perSample[,i] <- counts_per_biotype[-c(1:2),grep(samples[i], colnames(counts_per_biotype))]
+  reference_CountsPerBiotype_perSample[,i] <- counts_per_biotype[-c(1:2),grep(paste0("^",samples[i],"_"), colnames(counts_per_biotype))]
 }
 
 
